--- a/src/App.css
+++ b/src/App.css
@@ -22,14 +22,17 @@ nav{
   display: flex;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   >div{
-    color: #fff;
     flex: 4;
     display: flex;
     height: 100%;
     align-items: center;
-    font-size: large;
-    font-weight: 600;
     margin-left: 100px;
+    user-select: none;
+    >a{
+      color: #fff;
+      font-size: large;
+      font-weight: 600;
+    }
   }
   .navigate_menu{
     display: flex;
@@ -61,6 +64,10 @@ nav{
   }
 }
 
+.nav_zone{
+  height: 60px;
+}
+
 .body_container{
   background-color: #7b828f;
 }
@@ -71,4 +78,37 @@ nav{
   padding: 20px 50px;
   font-size: 18px;
   background-color: #e6e6e6;
+}
+
+.home_img1{
+  width: 720px;
+  margin: 30px auto;
+  align-items: center;
+}
+
+.contact_container{
+  width:720px;
+  height:480px;
+  margin: 0 auto;
+  padding: 20px 50px;
+  background-color: #fff;
+  border-radius: 10px;
+  position: fixed;
+  left: 10%;
+  right: 10%;
+  top: 10%;
+  bottom: 10%;
+}
+
+.popUpCloser{
+  position: absolute;
+  width:50px;
+  height:50px;
+  right: 15px;
+  top: 15px;
+  border-radius:5px;
+  font-size: 20px;
+  background: none;
+  cursor: pointer;
+  user-select: none;
 }
